--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.4.0'
-	id 'io.spring.dependency-management' version '1.1.6'
+	alias(libs.plugins.springBoot)
+	alias(libs.plugins.springDM)
+	alias(libs.plugins.lombok)
 }
 
 group = 'com.criticaster'
@@ -24,11 +25,20 @@ repositories {
 }
 
 dependencies {
+	implementation libs.postgresql
+	implementation libs.liquibase
+	implementation libs.preliquibase
+	implementation libs.mapstruct
+	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
+
 	compileOnly 'org.projectlombok:lombok'
-	annotationProcessor 'org.projectlombok:lombok'
+
+	//annotationProcessor 'org.projectlombok:lombok'
+	annotationProcessor libs.lombokMapstructBinding
+	annotationProcessor libs.mapstructProcessor
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
