--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,7 +3,7 @@ spring:
     name: reviewer
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/reviewer
+    url: jdbc:postgresql://localhost:5433/reviewer
     username: reviewer
     password: reviewer
   jpa:
@@ -12,7 +12,7 @@ spring:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     open-in-view: false
   liquibase:
-    enabled: true
+    enabled: false
     default-schema: ${DB_SCHEMA:pmp_ms_nsi}
     liquibase-schema: ${DB_SCHEMA:pmp_ms_nsi}
     change-log: classpath:db/changelog/db.changelog-master.xml
