--- a/src/main/resources/docker/docker-compose.yaml
+++ b/src/main/resources/docker/docker-compose.yaml
@@ -6,6 +6,8 @@ services:
       POSTGRES_DB: reviewer
       POSTGRES_USER: reviewer
       POSTGRES_PASSWORD: reviewer
+    ports:
+      - 5433:5432
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
@@ -13,7 +15,7 @@ services:
     image: adminer
     restart: always
     ports:
-      - 8080:8080
+      - 8088:8080
 
 volumes:
   postgres_data:
