--- a/build.gradle
+++ b/build.gradle
@@ -29,13 +29,14 @@ dependencies {
 	implementation libs.liquibase
 	implementation libs.preliquibase
 	implementation libs.mapstruct
+	implementation libs.openapi
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 
 	compileOnly 'org.projectlombok:lombok'
 
-	//annotationProcessor 'org.projectlombok:lombok'
 	annotationProcessor libs.lombokMapstructBinding
 	annotationProcessor libs.mapstructProcessor
 
