--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,7 @@ dependencyResolutionManagement {
             version('lombokMapstructBinding', '0.2.0')
             version('preliquibase', '1.1.1')
             version('postgresql', '42.7.4')
+            version('openapi', '2.6.0')
 
             library('postgresql', 'org.postgresql', 'postgresql').versionRef('postgresql')
             library('liquibase', 'org.liquibase', 'liquibase-core').version('4.17.2')
@@ -17,6 +18,7 @@ dependencyResolutionManagement {
             library('mapstruct', 'org.mapstruct', 'mapstruct').versionRef('mapstruct')
             library('lombokMapstructBinding', 'org.projectlombok', 'lombok-mapstruct-binding').versionRef('lombokMapstructBinding')
             library('mapstructProcessor', 'org.mapstruct', 'mapstruct-processor').versionRef('mapstruct')
+            library('openapi', 'org.springdoc', 'springdoc-openapi-starter-webmvc-ui').versionRef('openapi')
 
             plugin('lombok', 'io.freefair.lombok').versionRef('lombok')
             plugin('springDM', 'io.spring.dependency-management').versionRef('springDM')
