--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -29,3 +29,6 @@ spring:
   springdoc:
     api-docs:
       path: /api-docs
+    swagger-ui:
+      path: /swagger-ui
+      operations-sorter: method
